--- a/src/components/css/Welcome.css
+++ b/src/components/css/Welcome.css
@@ -1,7 +1,62 @@
+:root {
+    --primary-color: #282c34;
+    --secondary-color: #61dafb;
+    --dark-blue: #081158;
+    --plum: #ec8675;
+    --light-blue: #a0d2eb;
+    --lightest-blue: #d6e9f8;
+    --white-smoke: #eef0f4;
+    --white: #fff;
+    --black: #000;
+    --grey: #afafaf;
+    --azure: #007fff;
+}
+
 body {
-    font-family: Helvetica Neue, sans-serif;
-    background-color: #f4f4f4;
-    padding: 20px;
+    font-family: "JetBrains Mono", sans-serif;
+    background-color: var(--white-smoke);
+    font-size: 14px;
+    line-height: 1.6em;
+}
+
+h1 {
+    margin-top: 0;
+    font-family: "JetBrains Mono", sans-serif;
+    font-size: 72px;
+    font-weight: 500;
+    line-height: 1.1em;
+}
+
+h2 {
+    margin-top: 0;
+    font-family: "JetBrains Mono", sans-serif;
+    font-size: 64px;
+    font-weight: 500;
+    line-height: 1.1em;
+}
+
+h3 {
+    margin-top: 0;
+    font-family: "JetBrains Mono", sans-serif;
+    font-size: 55px;
+    font-weight: 500;
+    line-height: 1.1em;
+}
+
+h4 {
+    margin-top: 0;
+    font-family: "JetBrains Mono", sans-serif;
+    font-size: 30px;
+    font-weight: 500;
+    line-height: 1.1em;
+}
+
+h5 {
+    margin-top: 0;
+    font-family: "JetBrains Mono", sans-serif;
+    font-size: 25px;
+    font-weight: 500;
+    line-height: 1.1em;
 }
 
 .logo
@@ -17,7 +72,7 @@ body {
 
 .banner {
     padding-bottom: 20px;
-    margin-top: 150px;
+    margin-top: 20px;
     color: #fff;
     width: 100%;
     height: 600px;
@@ -31,14 +86,176 @@ body {
     transition: 0.5s ease-in-out;
 }
 
+.container {
+    z-index: 2;
+    width: 95%;
+    max-width: 1450px;
+    position: relative;
+}
+
+.nav-menu {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 100px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.button {
+    min-width: 200px;
+    background-color: var(--primary-color);
+    text-align: center;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    background-position: 20px;
+    background-repeat: no-repeat;
+    background-size: auto 15px;
+    border: 0 solid #000;
+    border-radius: 6px;
+    margin-top: 0;
+    padding: 20px 20px 20px 40px;
+    font-family: "JetBrains Mono", sans-serif;
+    font-weight: bold;
+    line-height: 1.6em;
+    transition: padding 0.5s cubic-bezier(0.23, 1, 0.32, 1),
+    background-position 0.5s cubic-bezier(0.23, 1, 0.32, 1),
+    transform 0.5s cubic-bezier(0.23, 1, 0.32, 1), color 0.2s, opacity 0.2s;
+    display: block;
+    margin-right: 20px;
+    text-decoration: none;
+    color: var(--white);
+}
+
+.button:hover {
+    background-position: 30px;
+    padding-left: 50px;
+    transform: translate(0, -3px);
+}
+
+.container.flex-center {
+    flex-direction: column;
+    align-items: center;
+    display: flex;
+}
+
+.section.free-w-hero {
+    background-color: var(--white-smoke);
+    overflow: hidden;
+}
+
+.hero-image-mask {
+    width: 100%;
+    height: 600px;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.hero-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover
+}
+
+.hero-line {
+    z-index: 2;
+    width: 150vw;
+    height: 200px;
+    background-color: var(--lightest-blue);
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    margin-top: auto;
+    margin-bottom: auto;
+    display: flex;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    transform: rotate(3deg);
+}
+
+.hero-line.text-line {
+    background-color: var(--black);
+    color: var(--white);
+}
+
+.footer-contact-link {
+    color: var(--white);
+    text-decoration: none;
+    font-size: 30px;
+    font-weight: 500;
+    line-height: 1.6em;
+    font-family: Helvetica Neue, sans-serif;
+}
+
+.footer-link {
+    color: var(--white);
+    text-decoration: none;
+    margin-bottom: 5px;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 1.6em;
+    font-family: Helvetica Neue, sans-serif;
+}
+
+.footer-brand {
+    height: 30px;
+    border-bottom-style: none;
+    padding-left: 0;
+}
+
+.container.footer-container {
+    grid-column-gap: 60px;
+    grid-row-gap: 100px;
+    grid-template-rows: auto;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-columns: 1fr;
+    margin-bottom: 30px;
+    display: grid;
+}
+
+.section.footer-section {
+    background-color: var(--dark-blue);
+    color: var(--white);
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    position: relative;
+}
+
+.label {
+    color: var(--dark-blue);
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    margin-bottom: 0;
+    font-weight: 500;
+}
+
+.label.footer-label {
+    color: var(--white);
+    margin-bottom: 15px;
+    font-size: 20px;
+    font-weight: 700;
+    position: static;
+}
+
+.text-block {
+    margin-bottom: 30px;
+}
 
 /*Setting For Students and For Admin thumbnail image*/
 
 .option {
     text-align: center;
-    width: 45%; /* Adjust this width as needed */
+    width: 50%; /* Adjust this width as needed */
     display: inline-block;
-    margin: 1%;
+    margin: 0 0 20px 0;
     position: relative;
 }
 
@@ -75,7 +292,6 @@ body {
     background-color: darkblue; /* Change to your desired hover button color */
 }
 
-
 .contact {
     text-align: right;
 }
@@ -84,6 +300,8 @@ body {
     background-color: crimson;
     color: white;
     padding: 10px 20px;
+    margin-bottom: 30px;
+    margin-top: 20px;
     border-radius: 30px;
     cursor: pointer;
     text-align: right;
