--- a/src/components/css/StudentHomePage.css
+++ b/src/components/css/StudentHomePage.css
@@ -1,9 +1,69 @@
+:root {
+    --dark-blue: #081158;
+    --gainsboro: #dfdfdf;
+    --smoke: whitesmoke;
+    --grey: #afafaf;
+    --white-smoke: #eef0f4;
+    --white: white;
+    --azure: #d2e4e0;
+    --black: black;
+    --light-blue: #5b95d2;
+    --green: #8ea5a0;
+    --lightest-blue: #cfddee;
+    --plum: #ec8675;
+    --primary: #081158;
+}
 
-/* Basic styles to the whole page */
 body {
-    font-family: Helvetica Neue, sans-serif;
-    background-color: #f4f4f4;
-    padding: 20px;
+    color: var(--dark-blue);
+    font-family: Red Hat Display, sans-serif;
+    font-size: 14px;
+    line-height: 1.6em;
+}
+
+h1 {
+    margin-top: 0;
+    margin-bottom: 30px;
+    font-family: Sato, sans-serif;
+    font-size: 72px;
+    font-weight: 500;
+    line-height: 1.1em;
+}
+
+h2 {
+    margin-top: 0;
+    margin-bottom: 30px;
+    font-family: Sato, sans-serif;
+    font-size: 64px;
+    font-weight: 500;
+    line-height: 1.1em;
+}
+
+h3 {
+    margin-top: 0;
+    margin-bottom: 30px;
+    font-family: Sato, sans-serif;
+    font-size: 55px;
+    font-weight: 500;
+    line-height: 1.1em;
+}
+
+h4 {
+    margin-top: 0;
+    margin-bottom: 30px;
+    font-family: Sato, sans-serif;
+    font-size: 30px;
+    font-weight: 500;
+    line-height: 1.1em;
+}
+
+h5 {
+    margin-top: 0;
+    margin-bottom: 15px;
+    font-family: Sato, sans-serif;
+    font-size: 25px;
+    font-weight: 500;
+    line-height: 1.1em;
 }
 
 .logo
@@ -11,15 +71,16 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100px;
     height: 100px;
-    padding: 20px;
+    width: 100px;
     border-radius: 10px;
+    padding: 10px;
 }
 
 .banner {
-    padding-bottom: 20px;
-    margin-top: 150px;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    margin-top: 50px;
     color: #fff;
     width: 100%;
     height: 600px;
@@ -33,54 +94,208 @@ body {
     transition: 0.5s ease-in-out;
 }
 
-.banner-text {
-    background-color: darkblue;
-    padding: 20px;
-    border-radius: 10px;
-    text-align: left;
-    width: 100%;
-    box-sizing: border-box;
-}
-
-.banner-text h1 {
-    font-size: 50px;
-    margin: 30px;
-    text-align: left;
-    color: white;
-}
-
-.banner-text p {
-    font-size: 20px;
-    margin-top: 30px;
-    color: white;
-    text-align: left;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-}
-
-/* Style the search box */
-.search-box {
-    background-color: #f8f8f8;
-    padding: 20px;
-    border-radius: 10px;
-    text-align: center;
-    margin: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
-    align-content: center;
-    box-sizing: border-box;
-    font-size: 18px;
-}
-
-/* Style the Student Signup form */
-.student-signup {
-    background-color: #f8f8f8;
-    padding: 20px;
-    border-radius: 10px;
-    text-align: center;
-    margin: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+.nav-menu {
     align-items: center;
-    box-sizing: border-box;
-    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 100px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-top: 150px;
 }
 
+.button {
+    min-width: 200px;
+    background-color: var(--primary);
+    text-align: center;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    background-position: 20px;
+    background-repeat: no-repeat;
+    background-size: auto 15px;
+    border: 0 solid #000;
+    border-radius: 6px;
+    margin-top: 0;
+    padding: 20px 20px 20px 40px;
+    font-family: "JetBrains Mono", sans-serif;
+    line-height: 1.6em;
+    transition: padding .5s cubic-bezier(.23, 1, .32, 1), background-position .5s cubic-bezier(.23, 1, .32, 1), transform .5s cubic-bezier(.23, 1, .32, 1), color .2s, opacity .2s;
+    display: block;
+    margin-right: 10px;
+    text-decoration: none;
+    color: var(--white-smoke);
+    font-weight: bold;
+}
 
+.button:hover {
+    background-position: 30px;
+    padding-left: 50px;
+    transform: translate(0, -3px);
+}
+
+.container {
+    z-index: 2;
+    width: 100%;
+    position: relative;
+}
+
+.container.flex-center {
+    flex-direction: column;
+    align-items: center;
+    display: flex;
+    z-index: 2;
+}
+
+.free-w-hero {
+    background-color: var(--smoke);
+    overflow: hidden;
+}
+
+.hero-image-mask {
+    width: 100%;
+    height: 800px;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.hero-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.hero-line {
+    z-index: 2;
+    width: 100%;
+    height: 200px;
+    background-color: var(--lightest-blue);
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    margin-top: auto;
+    margin-bottom: auto;
+    display: flex;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    transform: rotate(4deg);
+    object-fit: cover;
+}
+
+.hero-line.text-line {
+    background-color: var(--dark-blue);
+    color: var(--white);
+    object-fit: cover;
+}
+
+.footer-contact-link {
+    color: var(--white);
+    font-family: Changa One, Impact, sans-serif;
+    font-size: 30px;
+    font-weight: 500;
+    line-height: 1.6em;
+}
+
+.footer-link {
+    color: var(--white);
+    margin-bottom: 5px;
+    font-family: Sato, sans-serif;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 1.6em;
+    text-decoration: none;
+}
+
+.footer-brand {
+    height: 30px;
+    border-bottom-style: none;
+    padding-left: 0;
+}
+
+.container.footer-container {
+    grid-column-gap: 50px;
+    grid-row-gap: 100px;
+    grid-template-rows: auto;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-columns: 1fr;
+    margin-bottom: 20px;
+    display: grid;
+
+}
+
+.section.footer-section {
+    background-color: var(--dark-blue);
+    color: var(--white);
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.column {
+    flex-direction: column;
+    align-items: flex-start;
+    display: flex;
+    position: relative;
+}
+
+.label {
+    color: var(--dark-blue);
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    margin-bottom: 0;
+    font-weight: 500;
+}
+
+.label.footer-label {
+    color: var(--white);
+    margin-bottom: 15px;
+    font-size: 20px;
+    font-weight: 700;
+    position: static;
+}
+
+.text-block {
+    margin-bottom: 20px;
+    font-size: 20px;
+    font-weight: 500;
+    font-family: "JetBrains Mono", sans-serif;
+}
+
+.container-2 {
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5px;
+}
+
+.centered-heading {
+    text-align: center;
+    font-weight: 700;
+    font-size: 60px;
+}
+
+.centered-subheading {
+    margin-bottom: 100px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 25px;
+    font-weight: 500;
+    font-family: "JetBrains Mono", sans-serif;
+    letter-spacing: 1px;
+    line-height: 1.6em;
+    color: var(--black);
+}
+
+.input {
+    width: 300px;
+}
+
+.bootstrap-button {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
