--- a/src/components/css/CourseSelection.css
+++ b/src/components/css/CourseSelection.css
@@ -30,32 +30,6 @@ body {
     transition: 0.5s ease-in-out;
 }
 
-/* Styles for the image carousel container */
-.student-activities-carousel {
-    display: flex;
-    overflow: hidden;
-    width: 100%;
-    height: 400px;
-    margin: 0 auto;
-}
-
-/* Styles for individual images */
-.student-activities-carousel img {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-    animation: rotateImages 10s linear infinite;
-}
-
-@keyframes rotateImages {
-    0%, 100% {
-        opacity: 0;
-    }
-    20%, 80% {
-        opacity: 1;
-    }
-}
-
 .welcome {
     font-size: 30px;
     margin: 30px;
@@ -64,59 +38,11 @@ body {
     color: black;
 }
 
-.program-selection {
-    background-color: #f8f8f8;
-    padding: 20px;
-    border-radius: 10px;
-    text-align: left;
-    margin: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
-    align-content: center;
-    box-sizing: border-box;
-    font-size: 18px;
+.bootstrap-button {
+    display: inline-block;
+    width: 150px;
+    margin: 25px;
 }
 
-.term-selection {
-    background-color: #f8f8f8;
-    padding: 20px;
-    border-radius: 10px;
-    text-align: left;
-    margin: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
-    align-content: center;
-    box-sizing: border-box;
-    font-size: 18px;
-}
-
-.course-selection{
-    background-color: #f8f8f8;
-    padding: 20px;
-    border-radius: 10px;
-    text-align: left;
-    margin: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
-    align-content: center;
-    box-sizing: border-box;
-    font-size: 18px;
-    align-items: center;
-    list-style-type: none;
-}
-
-.register-button {
-    text-align: center;
-}
-
-.register-button button {
-    background-color: #282c34;
-    color: #fff;
-    padding: 10px 20px;
-    border-radius: 30px;
-    cursor: pointer;
-    font-size: 20px;
-}
-
-.register-button button:hover {
-    background-color: darkblue;
-}
 
 
