--- a/src/components/css/Welcome.css
+++ b/src/components/css/Welcome.css
@@ -259,6 +259,7 @@ h5 {
     font-size: 20px;
     font-weight: 500;
     font-family: "JetBrains Mono", sans-serif;
+    text-decoration: none;
 }
 
 .container-2 {
